chore: bump version to 4.0.0-SNAPSHOT, modernize build
- Bump version: 3.9.1-SNAPSHOT → 4.0.0-SNAPSHOT
- Bump Java release target: 1.8 → 11 (use --release flag)
- Replace <prerequisites> with maven-enforcer-plugin requireMavenVersion
- Fix deprecated API: getMenuShortcutKeyMask() → getMenuShortcutKeyMaskEx()
- Fix deprecated API: Class.newInstance() → getDeclaredConstructor().newInstance()
- Fix deprecated API: new Locale("tr","tr") → Locale.forLanguageTag("tr-TR")
- Remove redundant explicit Maven Central <repository> declaration
- Skip javadoc generation for xchart-demo (demo app, not a library)
- Rename property: project.junit.jupiter.version → junit.jupiter.version
- Bump maven-jar-plugin 3.4.1 → 3.4.2
- Bump maven-surefire-plugin 3.2.5 → 3.5.4
- Bump maven-javadoc-plugin 3.7.0 → 3.12.0
- Bump maven-release-plugin 3.0.1 → 3.1.1
- Remove duplicate <doclint> and stale <source>1.8</source> from javadoc config